tests/ui/basic/format_specifier_not_supported.rs
use metamatch::eval;

fn main() {
    // Format specifiers are not supported
    let _ = eval!(format!("{x:?}"));
}
